<resources>
    <string name="app_name">RailwayReservation</string>
    <string name="email_empty">Please enter your email</string>
    <string name="valid_email">Please enter a valid email address</string>
    <string name="password_empty">Please enter a password</string>
    <string name="password_length">Please enter at least 6 characters</string>
    <string name="train_image_CD">Train management image</string>
    <string name="announcement_image_CD">Train announcement image</string>
    <string name="reports_image_CD">Train reports image</string>
    <string name="txt_train_management">Train Management</string>
    <string name="body_train_management">Manage train information, train schedule, train seats</string>
    <string name="button_train_management">To management</string>
    <string name="txt_train_announcement">Train Announcement</string>
    <string name="body_train_announcement">Provide announcements to users</string>
    <string name="button_train_announcement">To announcement</string>
    <string name="txt_train_reports">Train Reports</string>
    <string name="body_train_reports">Daily reports on operations</string>
    <string name="button_train_reports">To reports</string>
    <string name="txt_train_issues">Train Issues</string>
    <string name="body_train_issues">Attain a list of issues being reported</string>
    <string name="button_train_issues">To issues</string>
    <string name="button_train_refunds">To refunds</string>
        <string name="txt_train_refunds">Train Refunds</string>
        <string name="body_train_refunds">Requests for refunds of ticket cancellations</string>
    <string name="title_activity_admin_login">Login</string>
    <string name="admin_login_title">Admin Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reset_password">Reset Password</string>
    <string name="register_acc">Sign Up</string>
    <string name="background_photo_contentDesc">train background photo</string>
    <string name="admin_register_title">Registration</string>
    <string name="register_name">Enter Name</string>
    <string name="prompt_phoneNumber">E.g. 0121124562</string>
    <string name="register_confirm_pass">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="title_activity_train_main">Main Train Page</string>
    <string name="title_home">Home</string>
    <string name="title_passenger">Passenger</string>
    <string name="title_admin">Admin</string>
    <string name="train_name_text">Train Name</string>
    <string name="add_type_hint">E.g. XXX Train</string>
    <string name="type_spinner_desc">Select train type</string>
    <string name="lane_text">Train Lane: </string>
    <string name="add_lane_hint">E.g. Angsana Line</string>
    <string name="lane_spinner_desc">Select train lane</string>
    <string name="stationStart_text">Start Train Station</string>
    <string name="add_stationStart_hint">E.g. Station SXXX</string>
    <string name="stationEnd_text">End Train Station</string>
    <string name="trainInfoFrag_trainTypeSpinner">Select what train want to make reserve</string>
    <string name="trainInfoFrag_trainNoText">Train Number: </string>
    <string name="addSuffixTrainTxt"> Train</string>
    <string name="add_stationEnd_hint">E.g. Station EXXX</string>
    <string name="station_spinner_desc">Select start train station</string>
    <string name="station_spinner_desc2">Select end train station</string>
    <string name="search_train_btn">Search</string>
    <string name="selection_train_btn">Select</string>
    <string name="add_train_btn">Add</string>
    <string name="add_trainInfo_back_btn">Back to info page</string>
    <string name="numOfCoachText">No of car/coach: </string>
    <string name="numOfCoachSpinnerCD">The train has how many car/coach</string>
    <string name="addTrainInfoStartStationCD">Start from where</string>
    <string name="addTrainInfoEndStationCD">End at where</string>
    <string name="addTrainNoText">Train Number</string>
    <string name="addTrainNoHint">E.g. 10</string>
    <string name="addTrainStatusCD">Status</string>
    <string-array name="numOfTrainCoaches">
        <item>4 Coaches</item>
        <item>5 Coaches</item>
    </string-array>
    <string-array name="trainType_items">
        <item>Angsana Train</item>
        <item>Balak Train</item>
        <item>Chino Train</item>
        <item>Dalluman Train</item>
        <item>Eve Train</item>
    </string-array>
    <string-array name="lane_items">
        <item>Standard Lane</item>
        <item>Express Lane</item>
    </string-array>
    <string-array name="seat_category_for_add">
        <item>VIP seats</item>
        <item>Standard seats - At Window</item>
        <item>Standard seats - At Alley</item>
    </string-array>
    <string-array name="status_items">
        <item>Active</item>
        <item>Deactivate</item>
    </string-array>
    <string-array name="status_issue_resolve">
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="train_name_items">
        <item>Angsana</item>
        <item>Balak</item>
        <item>Chino</item>
        <item>Erik</item>
        <item>Sam</item>

    </string-array>
    <string-array name="seat_category">
        <item>VIP seats -> RM10</item>
        <item>Standard seats - At Window -> RM13</item>
        <item>Standard seats - At Alley -> RM15</item>
    </string-array>
    <string-array name="seats_range">
        <item>VIP seats -> A1 - D1, A2 - D2</item>
        <item>Standard seats - At Window -> A3 - D13, D3 - D13</item>
        <item>Standard seats - At Alley -> B3 - B13, C3 - C13</item>

    </string-array>
    <string-array name="vip_seats_range">
        <item>A1 - D1</item>
        <item>A2 - D2</item>
    </string-array>
    <string-array name="vip_seats">
        <item>A1</item>
        <item>B1</item>
        <item>C1</item>
        <item>D1</item>
        <item>A2</item>
        <item>B2</item>
        <item>C2</item>
        <item>D2</item>
    </string-array>
    <string-array name="vip_seats_price">
        <item>RM10</item>
    </string-array>
    <string-array name="standard_windowSeats_range">
        <item>A3 - A13</item>
        <item>D3 - D13</item>
    </string-array>
    <string-array name="standard_windowSeats">
        <item>A3</item>
        <item>D3</item>
        <item>A4</item>
        <item>D4</item>
        <item>A5</item>
        <item>D5</item>
        <item>A6</item>
        <item>D6</item>
        <item>A7</item>
        <item>D7</item>
        <item>A8</item>
        <item>D8</item>
        <item>A9</item>
        <item>D9</item>
        <item>A10</item>
        <item>D10</item>
        <item>A11</item>
        <item>D11</item>
        <item>A12</item>
        <item>D12</item>
        <item>A13</item>
        <item>D13</item>
    </string-array>
    <string-array name="standard_windowSeats_price">
        <item>RM13</item>
    </string-array>
    <string-array name="standard_alleySeats_range">
        <item>B3 - B13</item>
        <item>C3 - C13</item>
    </string-array>
    <string-array name="standard_alleySeats">
        <item>B3</item>
        <item>C3</item>
        <item>B4</item>
        <item>C4</item>
        <item>B5</item>
        <item>C5</item>
        <item>B6</item>
        <item>C6</item>
        <item>B7</item>
        <item>C7</item>
        <item>B8</item>
        <item>C8</item>
        <item>B9</item>
        <item>C9</item>
        <item>B10</item>
        <item>C10</item>
        <item>B11</item>
        <item>C11</item>
        <item>B12</item>
        <item>C12</item>
        <item>B13</item>
        <item>C13</item>
    </string-array>
    <string-array name="standard_alleySeats_price">
        <item>RM15</item>
    </string-array>
    <string-array name="four_coaches">
        <item>Coach 1</item>
        <item>Coach 2</item>
        <item>Coach 3</item>
        <item>Coach 4</item>
    </string-array>
    <string-array name="five_coaches">
        <item>Coach 1</item>
        <item>Coach 2</item>
        <item>Coach 3</item>
        <item>Coach 4</item>
        <item>Coach 5</item>
    </string-array>
    <string-array name="report_category_items">
        <item>Station Issues</item>
        <item>Train Issues</item>
        <item>Schedule Issues</item>
    </string-array>
    <string-array name="seatStatus">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="schedule_page_title">Schedule</string>
    <string name="schedule_train_type_txt">Train Name: </string>
    <string name="arrow_towards_image">This image to show from station towards next station</string>
    <string name="add_departureTime">Departure Time: </string>
    <string name="add_arrivalTime">Arrival Time: </string>
    <string name="add_reachTime">Reach Time</string>
    <string name="add_nextStation">Next Station</string>
    <string name="update_departureTime">Departure Time: </string>
    <string name="update_arrivalTime">Arrival Time </string>
    <string name="issue_text">Issues: </string>
    <string name="issue_describe">Describe issue: </string>
    <string name="issue_coach">Coach Id: </string>
    <string name="issue_coachHint">E.g. A12</string>
    <string name="issue_describeHint">Explain the issue</string>
    <string name="issue_spinnerHint">Select suitable issue</string>
    <string name="issue_btn">Report</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="train_info_text">Train Info</string>
    <string name="train_schedule_text">Train Schedule</string>
    <string name="train_seats_text">Train Seats</string>
    <string name="add_text">Add</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
    <string-array name="schedule_time">
        <item>0800</item>
        <item>0830</item>
        <item>0900</item>
        <item>0930</item>
        <item>1000</item>
        <item>1030</item>
        <item>1100</item>
        <item>1130</item>
        <item>1200</item>
        <item>1230</item>
        <item>1300</item>
        <item>1330</item>
        <item>1400</item>
        <item>1430</item>
        <item>1500</item>
        <item>1530</item>
        <item>1600</item>
        <item>1630</item>
        <item>1700</item>
        <item>1730</item>
    </string-array>
    <string-array name="station_names">
        <item>Angsana</item>
        <item>Avion </item>
        <item>Balak </item>
        <item>Chino </item>
        <item>Dalluman </item>
        <item>Edward </item>
        <item>Federick </item>
        <item>Golum </item>
        <item>Helumin </item>
        <item>Indigo </item>
        <item>Jesper </item>
    </string-array>
    <string-array name="station_for_balak">
        <item>Balak </item>
        <item>Asper </item>
        <item>Cander </item>
        <item>Dello </item>
        <item>Enpear </item>
        <item>Fenfir </item>
        <item>Godux </item>
    </string-array>
    <string-array name="station_for_chino">
        <item>Chino </item>
        <item>Dexter </item>
        <item>Elluc </item>
        <item>Feig </item>
        <item>Gallo </item>
        <item>Helium </item>
        <item>Iglor </item>
        <item>Sonja </item>
        <item>Nadine </item>
    </string-array>
    <string-array name="station_for_other">
        <item>Axxe </item>
        <item>Aitom </item>
        <item>Bander </item>
        <item>Cappo </item>
        <item>Dendum </item>
        <item>Exxete </item>
        <item>Frank </item>
    </string-array>
</resources>