<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reportIssue.ReportIssue">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/issue_spinner"
        app:layout_constraintStart_toStartOf="@+id/issue_spinner" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_describe"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/describe_text"
        app:layout_constraintStart_toStartOf="@+id/describe_text" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_coach"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/coachId_text"
        app:layout_constraintStart_toStartOf="@+id/coachId_text" />

    <Spinner
        android:id="@+id/issue_spinner"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/issue_spinnerHint"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/describe_text"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issue_spinner"
        android:hint="@string/issue_describeHint"
        />

    <EditText
        android:id="@+id/coachId_text"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/issue_coachHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/describe_text" />

    <Button
        android:id="@+id/report_btn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/issue_btn"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coachId_text" />
</androidx.constraintlayout.widget.ConstraintLayout>