<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.login.AdminLoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/admin_login_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_pass_txt"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email_txt" />

    <EditText
        android:id="@+id/input_email_txt"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/action_sign_in"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_pass_txt" />

    <Button
        android:id="@+id/resetPassBtn"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/reset_password"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/register_acc"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>