<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.trainSchedule.addSchedule.AddScheduleFragment">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stationStart_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/select_station_spinner"
        app:layout_constraintStart_toStartOf="@+id/select_station_spinner" />

    <Spinner
        android:id="@+id/select_station_spinner"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/station_spinner_desc"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTrainTypeTxt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train_name_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/addTrainTypeTxt"
        app:layout_constraintStart_toStartOf="@+id/addTrainTypeTxt" />

    <EditText
        android:id="@+id/addTrainTypeTxt"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/add_type_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:text="@string/add_departureTime"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_station_spinner" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_arrivalTime"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_station_spinner" />

    <Spinner
        android:id="@+id/schedule_depart_time_spinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        android:contentDescription="Select departure time"
        />

    <Spinner
        android:id="@+id/schedule_start_time_spinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        android:contentDescription="Select arrival time"
        />

    <Button
        android:id="@+id/schedule_add_btn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/add_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_scheduleCheck" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stationEnd_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/select_end_station_spinner"
        app:layout_constraintStart_toStartOf="@+id/select_end_station_spinner" />

    <Spinner
        android:id="@+id/select_end_station_spinner"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:contentDescription="Select end station"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_station_spinner" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_add_btn" />

    <Button
        android:id="@+id/button_scheduleCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="24dp"
        android:text="Check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_end_station_spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>