<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.trainInfo.infoManage.TrainInfoManageFragment">

    <Button
        android:id="@+id/add_btn"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="152dp"
        android:text="@string/add_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="50dp"
        android:text="@string/update_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="50dp"
        android:text="@string/delete_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_btn" />

    <Button
        android:id="@+id/check_info_btn"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="50dp"
        android:text="Check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>